# VocabLevels

./: .coderabbit.yaml  .gitignore  A1.csv  A2.csv  AGENTS.md  B1.csv  B2.csv  C1.csv  README.md  REVIEW.md  audit_lemmatization.py  candidates_B2_C1.csv  candidates_enhanced.csv  check_quality.py  check_quality_v2.py  cleanup_inflections.py  fill_a2_translations.py  fix_a2_duplicates.py  fix_b2.py  fix_capitalization.py  fix_csvs.py  fix_pos_and_overflow.py  generate_dutch_vocab.py  handoff.md  master_lemmas.txt  pyproject.toml  report.txt  report_fixed.txt  report_fixed_v2.txt  sonar-project.properties  sync_a2_with_goethe.py  vocab_manager.py  vocab_schema.py
arabic/: A1.csv  A2.csv  B1.csv  B2.csv  C1.csv
chinese/: A1.csv  A2.csv  B1.csv  B2.csv  C1.csv  HSK1.csv  HSK2.csv  HSK3.csv  HSK4.csv  HSK5.csv  HSK6.csv
docs/: cefr_vocab_audit.md  gemma-qa.md  technical-due-diligence.md
dutch/: A1.csv  A1.csv.pre-dedupe.bak  A2.csv  B1.csv  B1.csv.pre-dedupe.bak  B1.proposed.csv.pre-model-audit.bak  B2.csv  B2.proposed.csv.pre-model-audit.bak  C1.csv  C1.csv.pre-dedupe.bak  C1.proposed.csv.pre-model-audit.bak
english/: A1.csv  A2.csv  A2.csv.pre-dedupe.bak  B1.csv  B1.csv.pre-dedupe.bak  B2.csv  B2.csv.pre-dedupe.bak  C1.csv  en_top10000.tsv  lehrbuch.md
french/: A1.csv  A1.csv.pre-dedupe.bak  A2.csv  A2.csv.pre-dedupe.bak  B1.csv  B2.csv  C1.csv  C1.csv.pre-dedupe.bak
german/: A1.csv  A2.csv  B1.csv  B2.csv  C1.csv  de_top10000.tsv  lehrbuch.md
manual_reviews/: ALL-fully-done-proposed-for-audit.csv  ALL-langs-p20-scored.csv  README-tng-audit-samples.md  cross-level-dedupe-en-fr-nl.csv  cross-level-dedupe-en-fr-nl.md  model-audit-en-fr-nl-full.csv  model-audit-en-fr-nl-full.md  post-fix-sample-summary.md
spanish/: A1.csv  A2.csv  B1.csv  B2.csv  C1.csv  es_top10000.tsv  lehrbuch.md
swedish/: A1.csv  A2.csv  B1.csv  B2.csv  C1.csv
tests/: test_audit_lemmatization.py  test_cefr_list_integrity.py  test_check_quality.py  test_cleanup_inflections.py  test_fix_pos_and_overflow.py  test_gemma_qa_antigravity.py  test_gemma_qa_cefr.py  test_gemma_qa_client.py  test_gemma_qa_handcraft.py  test_gemma_qa_language_repair.py  test_gemma_qa_languages.py  test_gemma_qa_manual_review.py  test_gemma_qa_packing_quota.py  (+8 more)
(+307 files in other folders)
