[project]
name = "vocab-levels"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.pytest.ini_options]
addopts = "--cov=. --cov-branch --cov-report=term-missing --cov-fail-under=80"
testpaths = ["tests"]

[tool.coverage.run]
source = ["."]
branch = true
omit = [
    "tests/*",
    ".venv/*",
    "*/site-packages/*",
    "english/*",
    "german/*",
    "spanish/*",
    "arabic/*",
    "french/*",
    "swedish/*",
    "docs/*",
    "openspec/*",
]

[tool.coverage.report]
fail_under = 80
show_missing = true

[tool.ruff]
target-version = "py311"

[dependency-groups]
dev = [
    "pyright>=1.1.411",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.20",
]
